welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: not found: value a
	if (irem(a)<2 || irem(a)==2){
                 ^